--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tom de Bruin",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4"
   }
 }
